--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator App</title>
-    <link rel="stylesheet" href="Styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="calculator">
@@ -36,6 +36,6 @@
 
 
 
-    <script src="/Script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
